--- a/Grow.Server/Areas/Admin/Views/TeamTest/Delete.cshtml
+++ b/Grow.Server/Areas/Admin/Views/TeamTest/Delete.cshtml
@@ -1,22 +1,23 @@
 ﻿@model Grow.Data.Entities.Team
 
 @{
-    ViewData["Title"] = "Delete";
+    Layout = null;
 }
 
-<h2>Delete</h2>
+<!DOCTYPE html>
+
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>Delete</title>
+</head>
+<body>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Team</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
         <dt>
             @Html.DisplayNameFor(model => model.TagLine)
         </dt>
@@ -28,6 +29,18 @@
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Description)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.LogoImage)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.LogoImage.Id)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.TeamPhotoId)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.TeamPhotoId)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.ActiveSince)
@@ -60,10 +73,10 @@
             @Html.DisplayFor(model => model.InstagramUrl)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.IsActive)
+            @Html.DisplayNameFor(model => model.HasDroppedOut)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.IsActive)
+            @Html.DisplayFor(model => model.HasDroppedOut)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.MembersAsString)
@@ -72,22 +85,22 @@
             @Html.DisplayFor(model => model.MembersAsString)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.LogoImageId)
+            @Html.DisplayNameFor(model => model.Contest)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.LogoImageId)
+            @Html.DisplayFor(model => model.Contest.Id)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.TeamPhotoId)
+            @Html.DisplayNameFor(model => model.Name)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.TeamPhotoId)
+            @Html.DisplayFor(model => model.Name)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.HasDroppedOut)
+            @Html.DisplayNameFor(model => model.IsActive)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.HasDroppedOut)
+            @Html.DisplayFor(model => model.IsActive)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.CreatedAt)
@@ -109,3 +122,5 @@
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
+</body>
+</html>
