--- a/Grow.Server/Areas/Admin/Views/Teams/Details.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Teams/Details.cshtml
@@ -77,10 +77,10 @@
             @Html.DisplayFor(model => model.LogoImageId)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.TeamPhotoImageId)
+            @Html.DisplayNameFor(model => model.TeamPhotoId)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.TeamPhotoImageId)
+            @Html.DisplayFor(model => model.TeamPhotoId)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.HasDroppedOut)
