--- a/Grow.Server/Areas/Admin/Views/Organizers/Edit.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Organizers/Edit.cshtml
@@ -28,8 +28,8 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ImageId" class="control-label"></label>
-                <input asp-for="ImageId" class="form-control" />
+                <label asp-for="Image" class="control-label"></label>
+                <select asp-items="ViewBag.Images" asp-for="ImageId" class="form-control"></select>
                 <span asp-validation-for="ImageId" class="text-danger"></span>
             </div>
             <div class="form-group">
