--- a/Grow.Server/Areas/Admin/Views/TeamTest/Details.cshtml
+++ b/Grow.Server/Areas/Admin/Views/TeamTest/Details.cshtml
@@ -1,22 +1,22 @@
 ﻿@model Grow.Data.Entities.Team
 
 @{
-    ViewData["Title"] = "Delete";
+    Layout = null;
 }
 
-<h2>Delete</h2>
+<!DOCTYPE html>
 
-<h3>Are you sure you want to delete this?</h3>
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>Details</title>
+</head>
+<body>
+
 <div>
     <h4>Team</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Name)
-        </dd>
         <dt>
             @Html.DisplayNameFor(model => model.TagLine)
         </dt>
@@ -28,6 +28,18 @@
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Description)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.LogoImage)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.LogoImage.Id)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.TeamPhotoId)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.TeamPhotoId)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.ActiveSince)
@@ -60,10 +72,10 @@
             @Html.DisplayFor(model => model.InstagramUrl)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.IsActive)
+            @Html.DisplayNameFor(model => model.HasDroppedOut)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.IsActive)
+            @Html.DisplayFor(model => model.HasDroppedOut)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.MembersAsString)
@@ -72,22 +84,22 @@
             @Html.DisplayFor(model => model.MembersAsString)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.LogoImageId)
+            @Html.DisplayNameFor(model => model.Contest)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.LogoImageId)
+            @Html.DisplayFor(model => model.Contest.Id)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.TeamPhotoId)
+            @Html.DisplayNameFor(model => model.Name)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.TeamPhotoId)
+            @Html.DisplayFor(model => model.Name)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.HasDroppedOut)
+            @Html.DisplayNameFor(model => model.IsActive)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.HasDroppedOut)
+            @Html.DisplayFor(model => model.IsActive)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.CreatedAt)
@@ -102,10 +114,10 @@
             @Html.DisplayFor(model => model.UpdatedAt)
         </dd>
     </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
 </div>
+<div>
+    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+    <a asp-action="Index">Back to List</a>
+</div>
+</body>
+</html>
