--- a/Grow.Server/Areas/Admin/Views/TeamTest/Edit.cshtml
+++ b/Grow.Server/Areas/Admin/Views/TeamTest/Edit.cshtml
@@ -1,32 +1,24 @@
 ﻿@model Grow.Data.Entities.Team
 
 @{
-    ViewData["Title"] = "Create";
+    Layout = null;
 }
 
-@section Scripts {
-    <script type="text/javascript">
-        $("#search-box #search-input").keyup(create_search_entity_function('teams', 'search-results'));
-    </script>
-}
+<!DOCTYPE html>
 
-<h2>Create</h2>
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>Edit</title>
+</head>
+<body>
 
 <h4>Team</h4>
-
 <hr />
-<partial name="Partials/_SearchEntitiesBox" />
-<hr />
-
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
             <div class="form-group">
                 <label asp-for="TagLine" class="control-label"></label>
                 <input asp-for="TagLine" class="form-control" />
@@ -38,13 +30,13 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="LogoImage" class="control-label"></label>
-                <select asp-items="ViewBag.Images" asp-for="LogoImageId" class="form-control"></select>
+                <label asp-for="LogoImageId" class="control-label"></label>
+                <select asp-for="LogoImageId" class="form-control" asp-items="ViewBag.LogoImageId"></select>
                 <span asp-validation-for="LogoImageId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TeamPhoto" class="control-label"></label>
-                <select asp-items="ViewBag.Images" asp-for="TeamPhotoId" class="form-control"></select>
+                <label asp-for="TeamPhotoId" class="control-label"></label>
+                <input asp-for="TeamPhotoId" class="form-control" />
                 <span asp-validation-for="TeamPhotoId" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -73,16 +65,27 @@
                 <span asp-validation-for="InstagramUrl" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="MembersAsString" class="control-label"></label>
-                <input asp-for="MembersAsString" class="form-control" />
-                <span asp-validation-for="MembersAsString" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <div class="checkbox">
                     <label>
                         <input asp-for="HasDroppedOut" /> @Html.DisplayNameFor(model => model.HasDroppedOut)
                     </label>
                 </div>
+            </div>
+            <div class="form-group">
+                <label asp-for="MembersAsString" class="control-label"></label>
+                <input asp-for="MembersAsString" class="form-control" />
+                <span asp-validation-for="MembersAsString" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ContestId" class="control-label"></label>
+                <select asp-for="ContestId" class="form-control" asp-items="ViewBag.ContestId"></select>
+                <span asp-validation-for="ContestId" class="text-danger"></span>
+            </div>
+            <input type="hidden" asp-for="Id" />
+            <div class="form-group">
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <div class="checkbox">
@@ -92,7 +95,17 @@
                 </div>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <label asp-for="CreatedAt" class="control-label"></label>
+                <input asp-for="CreatedAt" class="form-control" />
+                <span asp-validation-for="CreatedAt" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="UpdatedAt" class="control-label"></label>
+                <input asp-for="UpdatedAt" class="form-control" />
+                <span asp-validation-for="UpdatedAt" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </form>
     </div>
@@ -102,3 +115,5 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
+</body>
+</html>
