--- a/Grow.Server/Areas/Admin/Views/Teams/Index.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Teams/Index.cshtml
@@ -28,7 +28,7 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model)
+        @foreach (var item in Model.OrderBy(t => t.Name))
         {
         <tr is-active="@item.IsActive">
             <td>
