Added CRUD controller + views for accounts in the admin area

--- a/Grow.Server/Views/Home/Program.cshtml
+++ b/Grow.Server/Views/Home/Program.cshtml
@@ -105,10 +105,10 @@
                                 @switch (evnt.Visibility)
                                 {
                                     case Event.EventVisibility.Public:
-                                        @: Public<br />Everyone can come, watch and maybe enter spontaneously
+                                        @: Public<br />Everyone can come and watch
                                         break;
                                     case Event.EventVisibility.ForActiveTeams:
-                                        @: Private<br />Only for active teams
+                                        @: Private<br />Only for actively enrolled teams
                                         break;
                                     case Event.EventVisibility.ForAllTeams:
                                         @: Private<br />Only for registered teams
