--- a/Grow.Server/Styles/backend.scss
+++ b/Grow.Server/Styles/backend.scss
@@ -29,6 +29,20 @@ input[type=checkbox] {
     }
 }
 
+/* Image selector input in the Backend entity forms */
+.form-group div.img-selector {
+    padding: 0;
+    border: 0;
+    display: grid;
+    grid-template-columns: auto 38px;
+
+    a {
+        &:hover {
+            background-color: rgba(0,0,0,0.05);
+        }
+    }
+}
+
 /* Column containing actions on /Type/Index pages */
 .options-column {
     word-wrap: normal;
