--- a/Grow.Server/Areas/Admin/Views/Events/Edit.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Events/Edit.cshtml
@@ -49,7 +49,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Image" class="control-label"></label>
-                <select asp-items="ViewBag.Images" asp-for="ImageId" class="form-control"></select>
+                <imgselector asp-items="ViewBag.Images" asp-for="ImageId" asp-category="events" class="form-control" />
                 <span asp-validation-for="ImageId" class="text-danger"></span>
             </div>
             <div class="form-group">
