--- a/Grow.Server/Areas/Admin/Views/Teams/Create.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Teams/Create.cshtml
@@ -39,12 +39,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="LogoImage" class="control-label"></label>
-                <select asp-items="ViewBag.Images" asp-for="LogoImageId" class="form-control"></select>
+                <imgselector asp-items="ViewBag.Images" asp-for="LogoImageId" asp-category="teamlogos" class="form-control" />
                 <span asp-validation-for="LogoImageId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="TeamPhoto" class="control-label"></label>
-                <select asp-items="ViewBag.Images" asp-for="TeamPhotoId" class="form-control"></select>
+                <imgselector asp-items="ViewBag.Images" asp-for="TeamPhotoId" asp-category="teams" class="form-control" />
                 <span asp-validation-for="TeamPhotoId" class="text-danger"></span>
             </div>
             <div class="form-group">
