--- a/Grow.Server/wwwroot/css/backend.css
+++ b/Grow.Server/wwwroot/css/backend.css
@@ -41,6 +41,12 @@ input[type=checkbox] {
 tr.inactive {
   background-color: rgba(0, 0, 0, 0.05); }
 
+/* Loading form elements (in case of ajax call) */
+.form-control.loading {
+  background: linear-gradient(270deg, rgba(255, 255, 255, 0), rgba(135, 228, 252, 0.35), rgba(255, 255, 255, 0));
+  background-size: 400% 100%;
+  animation: loading-back 1.5s ease infinite; }
+
 /* Entity search box */
 #search-box {
   padding: 0 20px; }
@@ -52,10 +58,6 @@ tr.inactive {
     background-position: 100% 50%; }
   100% {
     background-position: 0% 50%; } }
-  #search-box #search-input.loading {
-    background: linear-gradient(270deg, rgba(255, 255, 255, 0), rgba(135, 228, 252, 0.35), rgba(255, 255, 255, 0));
-    background-size: 400% 100%;
-    animation: loading-back 1.5s ease infinite; }
   #search-box ul#search-results {
     list-style-type: none;
     padding-left: 0px; }
