Layout fixes for front page

--- a/Grow.Server/Styles/main.scss
+++ b/Grow.Server/Styles/main.scss
@@ -55,6 +55,25 @@
 
 	$pattern-background-size: 25em;
 
+/* Index-specific */
+
+.countdown {
+    font-family: 'Space Mono';
+    font-weight: bold;
+    font-size: 200%;
+
+    @media screen and (max-width: 599px) {
+        
+        font-size: 7.5vw;
+
+    }
+}
+
+.img-block img {
+    width: 100px;
+    margin: 15px;
+}
+
 /* Basic */
 
     html {
@@ -900,6 +919,11 @@ input[type="reset"],
 			header {
 				display: inline-block;
 			}
+
+            img {
+                width: 350px;
+                max-width: 85vw;
+            }
 
 			p {
 				letter-spacing: 0.1em;
