--- a/Grow.Server/Views/Shared/Layouts/_DefaultLayout.cshtml
+++ b/Grow.Server/Views/Shared/Layouts/_DefaultLayout.cshtml
@@ -100,7 +100,7 @@
                 <li><a href="https://pioniergarage.de/datenschutz">Privacy</a></li>
             </ul>
             <div>
-                <p>
+                <p style="text-align: center;">
                     Made with ❤ by
                     <a href="https://pioniergarage.de"><img src="/img/pg_logo.png" alt="PionierGarage" style="height: 24px; vertical-align: sub; margin-bottom: -1px" /></a>
                 </p>
