Updated og meta data

--- a/Grow.Server/Views/Shared/Layouts/_DefaultLayout.cshtml
+++ b/Grow.Server/Views/Shared/Layouts/_DefaultLayout.cshtml
@@ -44,12 +44,12 @@
     <!--[if lte IE 9]><link rel="stylesheet" href="/css/ie9.css" /><![endif]-->
 
     <meta charset="utf-8" />
-    <meta property="og:title" content="GROW Student Founding Contest - by PionierGarage" />
-    <meta property="og:image" content="http://grow.pioniergarage.de/img/crawler_banner.jpg" />
+    <meta property="og:title" content="GROW - the Student Founding Contest" />
+    <meta property="og:image" content="http://grow.pioniergarage.de/img/crawler_banner.jpg?v=1ba4c2" />
     <meta property="og:site_name" content="GROW by PionierGarage" />
-    <meta property="og:url" content="http://grow.pioniergarage.de" />
+    <meta property="og:url" content="https://grow.pioniergarage.de" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="GROW is an 11-week long founding contest for students. Realise your ideas and advance your startup and win prizes based on your progress." />
+    <meta property="og:description" content="GROW is an 11-week long founding contest for students. Realise your ideas, advance your startup and win prizes based on your progress." />
 
     @RenderSection("Styles", required: false)
 </head>
