Further fixes for the front page and navigation

--- a/Grow.Server/Styles/main.scss
+++ b/Grow.Server/Styles/main.scss
@@ -1021,11 +1021,13 @@ input[type="reset"],
 
     a {
         border-bottom-width: 0;
+        color: inherit;
     }
 
     .icons {
         img {
-            vertical-align: middle;
+            vertical-align: text-top;
+            height: 16px;
         }
     }
 
