--- a/Grow.Server/Views/Home/Judges.cshtml
+++ b/Grow.Server/Views/Home/Judges.cshtml
@@ -74,7 +74,7 @@
                     @if (!string.IsNullOrEmpty(lastYear))
                     {
                         <p>
-                            You can also check out @Html.ActionLink("the judges of the last contest", "Program", "Home", new { year = lastYear }).
+                            You can also check out @Html.ActionLink("the judges of the last contest", "Judges", "Home", new { year = lastYear }).
                         </p>
                     }
                 </section>
