--- a/Grow.Server/Views/Home/Mentors.cshtml
+++ b/Grow.Server/Views/Home/Mentors.cshtml
@@ -123,7 +123,7 @@
                     @if (!string.IsNullOrEmpty(lastYear))
                     {
                         <p>
-                            You can also check out @Html.ActionLink("the mentors of the last contest", "Program", "Home", new { year = lastYear }).
+                            You can also check out @Html.ActionLink("the mentors of the last contest", "Mentors", "Home", new { year = lastYear }).
                         </p>
                     }
                 </section>
