--- a/Grow.Server/Views/Home/Organizers.cshtml
+++ b/Grow.Server/Views/Home/Organizers.cshtml
@@ -66,7 +66,7 @@
                     @if (!string.IsNullOrEmpty(lastYear))
                     {
                         <p>
-                            You can also check out @Html.ActionLink("the organizers of the last contest", "Program", "Home", new { year = lastYear }).
+                            You can also check out @Html.ActionLink("the organizers of the last contest", "Organizers", "Home", new { year = lastYear }).
                         </p>
                     }
                 </section>
