--- a/Grow.Server/Views/Home/Teams.cshtml
+++ b/Grow.Server/Views/Home/Teams.cshtml
@@ -192,7 +192,7 @@
                     @if (!string.IsNullOrEmpty(lastYear))
                     {
                         <p>
-                            You can also check out @Html.ActionLink("the teams of the last contest", "Program", "Home", new { year = lastYear }).
+                            You can also check out @Html.ActionLink("the teams of the last contest", "Teams", "Home", new { year = lastYear }).
                         </p>
                     }
                 </section>
