--- a/Grow.Server/Views/Home/Index.cshtml
+++ b/Grow.Server/Views/Home/Index.cshtml
@@ -156,7 +156,7 @@
         </div>
         <p>
             <strong>4. GROW is not for profit</strong><br />
-            GROW is organized by the student-run association <a href="pioniergarage.de" style="color: white; font-weight: bold">PionierGarage e.V.</a> Our first and foremost goal is to inspire students to found their own ventures, which is why GROW is financed completely by donations.
+            GROW is organized by the student-run association <a href="https://pioniergarage.de" style="color: white; font-weight: bold">PionierGarage e.V.</a> Our first and foremost goal is to inspire students to found their own ventures, which is why GROW is financed completely by donations.
         </p>
     </section>
 
