--- a/Grow.Server/Areas/Admin/Views/Accounts/Create.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Accounts/Create.cshtml
@@ -4,20 +4,11 @@
     ViewData["Title"] = "Create";
 }
 
-@section Scripts {
-    <script type="text/javascript">
-        $("#search-box #search-input").keyup(create_search_entity_function('contests', 'search-results'));
-    </script>
-}
-
 <h2>Create</h2>
 
-<h4>Contest</h4>
+<h4>Accounts</h4>
 
 <hr />
-<partial name="Partials/_SearchEntitiesBox" />
-<hr />
-
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
