--- a/Grow.Server/Areas/Admin/Views/Mentors/Create.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Mentors/Create.cshtml
@@ -4,18 +4,12 @@
     ViewData["Title"] = "Create";
 }
 
-@section Scripts {
-    <script type="text/javascript">
-        $("#search-box #search-input").keyup(create_search_entity_function('mentors', 'search-results'));
-    </script>
-}
-
 <h2>Create</h2>
 
 <h4>Mentor</h4>
 
 <hr />
-<partial name="Partials/_SearchEntitiesBox" />
+<entitysearch asp-type="mentors" />
 <hr />
 
 <div class="row">
