--- a/Grow.Server/Views/Home/Judges.cshtml
+++ b/Grow.Server/Views/Home/Judges.cshtml
@@ -66,7 +66,7 @@
                         <li><a href="https://instagram.com/pioniergarage">Instagram</a></li>
                     </ul>
                     @{
-                        var lastYear = (ViewBag.ContestYears as ICollection<string>)
+                        var lastYear = (ViewBag.ContestYears as IDictionary<int, string>).Values
                             .Where(y => y.CompareTo(ViewBag.SelectedContestYear) < 0)
                             .OrderByDescending(y => y)
                             .FirstOrDefault();
