Improved image selector: - selector only shows files of the corresponding category - file categories are now enum values - selector displays a preview of the selected image

--- a/Grow.Server/Areas/Admin/Views/Contests/Create.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Contests/Create.cshtml
@@ -9,7 +9,7 @@
 <h4>Contest</h4>
 
 <hr />
-<entitysearch asp-type="contests" />
+<entitysearch asp-type="@Html.GetController()" />
 <hr />
 
 <div class="row">
