--- a/Grow.Server/Areas/Admin/Views/Organizers/Create.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Organizers/Create.cshtml
@@ -9,7 +9,7 @@
 <h4>Organizer</h4>
 
 <hr />
-<entitysearch asp-type="organizers" />
+<entitysearch asp-type="@Html.GetController()" />
 <hr />
 
 <div class="row">
@@ -33,7 +33,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Image" class="control-label"></label>
-                <imgselector asp-items="ViewBag.Images" asp-for="ImageId" asp-category="people" class="form-control" />
+                <imgselector asp-items="ViewBag.Images" asp-for="ImageId" asp-prop="Image" class="form-control" />
                 <span asp-validation-for="ImageId" class="text-danger"></span>
             </div>
             <div class="form-group">
