--- a/Grow.Server/Areas/Admin/Views/Partners/Edit.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Partners/Edit.cshtml
@@ -24,7 +24,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Image" class="control-label"></label>
-                <imgselector asp-items="ViewBag.Images" asp-for="ImageId" asp-category="partners" class="form-control" />
+                <imgselector asp-items="ViewBag.Images" asp-for="ImageId" asp-prop="Image" class="form-control" />
                 <span asp-validation-for="ImageId" class="text-danger"></span>
             </div>
             <div class="form-group">
