--- a/Grow.Server/Areas/Admin/Views/Prizes/Create.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Prizes/Create.cshtml
@@ -9,7 +9,7 @@
 <h4>Prize</h4>
 
 <hr />
-<entitysearch asp-type="prizes" />
+<entitysearch asp-type="@Html.GetController()" />
 <hr />
 
 <div class="row">
