--- a/Grow.Server/Areas/Admin/Views/Teams/Create.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Teams/Create.cshtml
@@ -9,7 +9,7 @@
 <h4>Team</h4>
 
 <hr />
-<entitysearch asp-type="teams" />
+<entitysearch asp-type="@Html.GetController()" />
 <hr />
 
 <div class="row">
@@ -33,12 +33,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="LogoImage" class="control-label"></label>
-                <imgselector asp-items="ViewBag.Images" asp-for="LogoImageId" asp-category="teamlogos" class="form-control" />
+                <imgselector asp-items="ViewBag.LogoImages" asp-for="LogoImageId" asp-prop="LogoImage" class="form-control" />
                 <span asp-validation-for="LogoImageId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="TeamPhoto" class="control-label"></label>
-                <imgselector asp-items="ViewBag.Images" asp-for="TeamPhotoId" asp-category="teams" class="form-control" />
+                <imgselector asp-items="ViewBag.TeamPhotos" asp-for="TeamPhotoId" asp-prop="TeamPhoto" class="form-control" />
                 <span asp-validation-for="TeamPhotoId" class="text-danger"></span>
             </div>
             <div class="form-group">
