--- a/Grow.Server/Areas/Admin/Views/Events/Delete.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Events/Delete.cshtml
@@ -36,10 +36,10 @@
             @Html.DisplayFor(model => model.End)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.FacebookLink)
+            @Html.DisplayNameFor(model => model.ExternalEventUrl)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.FacebookLink)
+            @Html.DisplayFor(model => model.ExternalEventUrl)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Location)
@@ -64,6 +64,12 @@
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Type)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Registration)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Registration)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.HasTimesSet)
