--- a/Grow.Server/Areas/Admin/Views/Events/Details.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Events/Details.cshtml
@@ -35,10 +35,10 @@
             @Html.DisplayFor(model => model.End)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.FacebookLink)
+            @Html.DisplayNameFor(model => model.ExternalEventUrl)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.FacebookLink)
+            @Html.DisplayFor(model => model.ExternalEventUrl)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Location)
@@ -63,6 +63,12 @@
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Type)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Registration)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Registration)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.HasTimesSet)
@@ -96,6 +102,15 @@
         </dt>
         <dd>
             @Html.DisplayFor(model => model.UpdatedAt)
+        </dd>
+        <dt>
+            Responses
+        </dt>
+        <dd>
+            @foreach (var response in Model.Responses.OrderBy(e => e.Created))
+            {
+                <div>@response.Name &lt;@response.Email&gt; - @response.ParticipantCount</div>
+            }
         </dd>
     </dl>
 </div>
