--- a/Grow.Server/Views/Home/Judges.cshtml
+++ b/Grow.Server/Views/Home/Judges.cshtml
@@ -62,8 +62,8 @@
                         No judges have been publicized yet. Check back later for more details or follow us on Social Media:
                     </p>
                     <ul class="icons">
-                        <li><a href="https://www.facebook.com/Pioniergarage/">Facebook</a></li>
-                        <li><a href="https://instagram.com/pioniergarage">Instagram</a></li>
+                        <li><a href="https://www.facebook.com/Pioniergarage/" target="_blank">Facebook</a></li>
+                        <li><a href="https://instagram.com/pioniergarage" target="_blank">Instagram</a></li>
                     </ul>
                     @{
                         var lastYear = (ViewBag.ContestYears as IDictionary<int, string>).Values
