--- a/Grow.Server/Views/Shared/Layouts/_DefaultLayout.cshtml
+++ b/Grow.Server/Views/Shared/Layouts/_DefaultLayout.cshtml
@@ -36,7 +36,7 @@
 
     <title>@ViewBag.Title - GROW by PionierGarage</title>
 
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--[if lte IE 8]><script src="/js/ie/html5shiv.js"></script><![endif]-->
     <link rel="stylesheet" href="/css/main.css" />
