--- a/Grow.Server/Views/Shared/Partials/_OptionCell.cshtml
+++ b/Grow.Server/Views/Shared/Partials/_OptionCell.cshtml
@@ -1,4 +1,4 @@
-﻿@model Grow.Data.Entities.BaseEntity
+﻿@model Grow.Data.Entities.BaseNamedEntity
 
 <td class="options-column">
     @if (!ViewData.ContainsKey("Disabled") || ViewData["Disabled"].Equals(false))
