--- a/Grow.Server/Areas/Admin/Views/Events/Index.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Events/Index.cshtml
@@ -30,6 +30,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Type)
             </th>
+            <th>
+                Registrations
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -54,6 +57,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Type)
+            </td>
+            <td>
+                @item.Responses.Sum(r => r.ParticipantCount)
             </td>
             <partial name="Partials/_OptionCell" model="item" />
         </tr>
