--- a/Grow.Server/Styles/main.scss
+++ b/Grow.Server/Styles/main.scss
@@ -221,6 +221,11 @@
         margin-top: 10px;
     }
 
+    input[disabled="disabled"], input.form-control[disabled="disabled"], input[readonly="readonly"], input.form-control[readonly="readonly"] {
+        background-color: rgba(0,0,0,0.05);
+        font-style: italic;
+    }
+
 /* Section/Article */
 
 	section, article {
