--- a/Grow.Server/Views/Home/Teams.cshtml
+++ b/Grow.Server/Views/Home/Teams.cshtml
@@ -150,16 +150,22 @@
                                 <img src="/img/icon/www.png" />
                             </a>
                         }
-                        @if (!string.IsNullOrEmpty(team.WebsiteUrl))
+                        @if (!string.IsNullOrEmpty(team.Email))
                         {
                             <a href="mailto:@team.Email">
                                 <img src="/img/icon/mail.png" />
                             </a>
                         }
-                        @if (!string.IsNullOrEmpty(team.WebsiteUrl))
+                        @if (!string.IsNullOrEmpty(team.FacebookUrl))
                         {
-                            <a href="https://www.facebook.com/@team.FacebookUrl">
+                            <a href="https://www.facebook.com/@team.FacebookUrl" target="_blank">
                                 <img src="/img/icon/fb.png" />
+                            </a>
+                        }
+                        @if (!string.IsNullOrEmpty(team.InstagramUrl))
+                        {
+                            <a href="https://www.facebook.com/@team.InstagramUrl" target="_blank">
+                                <img src="/img/icon/insta.png" />
                             </a>
                         }
                     </div>
@@ -180,8 +186,8 @@
                         No teams have been publicized yet. Check back later for more details or follow us on Social Media:
                     </p>
                     <ul class="icons">
-                        <li><a href="https://www.facebook.com/Pioniergarage/">Facebook</a></li>
-                        <li><a href="https://instagram.com/pioniergarage">Instagram</a></li>
+                        <li><a href="https://www.facebook.com/Pioniergarage/" target="_blank">Facebook</a></li>
+                        <li><a href="https://instagram.com/pioniergarage" target="_blank">Instagram</a></li>
                     </ul>
                     @{
                         var lastYear = (ViewBag.ContestYears as IDictionary<int, string>).Values
