--- a/Grow.Server/Views/Home/About.cshtml
+++ b/Grow.Server/Views/Home/About.cshtml
@@ -31,7 +31,7 @@
         <section id="organizers" class="wrapper style4 container">
             <div class="content">
                 <header>
-                    <h3>The team</h3>
+                    <h3>The <strong>team</strong></h3>
                 </header>
                 @foreach (var orga in Model)
                 {
@@ -50,7 +50,7 @@
             <div class="content">
                 <section style="text-align: center">
                     <header>
-                        <h3>The team</h3>
+                        <h3>The <strong>team</strong></h3>
                     </header>
                     <p>
                         No organizers have been publicized yet. Check back later for more details or follow us on Social Media (see below).
@@ -64,7 +64,7 @@
         <div class="content">
             <section style="text-align: center">
                 <header>
-                    <h3>The organizer: PionierGarage e.V.</h3>
+                    <h3>The <strong>organizer</strong>: PionierGarage e.V.</h3>
                 </header>
                 <p>
                     The <a href="https://pioniergarage.de/" target="_blank">PionierGarage</a> is Germany's largest student club focused on entrepreneurship. 
@@ -75,6 +75,40 @@
                     <li><a href="https://pioniergarage.de/" target="_blank">Website</a></li>
                     <li><a href="https://www.facebook.com/Pioniergarage/" target="_blank">Facebook</a></li>
                     <li><a href="https://instagram.com/pioniergarage" target="_blank">Instagram</a></li>
+                </ul>
+            </section>
+        </div>
+    </section>
+
+    <section id="pioniergarage" class="wrapper style4 container">
+        <div class="content">
+            <section style="text-align: center">
+                <header>
+                    <h3>The <strong>location</strong>: PionierGarage Launchpad</h3>
+                </header>
+                <p>
+                    The <a href="https://pioniergarage.de/launchpad" target="_blank">PionierGarage Launchpad</a> 
+                    in Karlsruhe is the first student-run incubator in Germany.
+                    Open to all student projects and young founders, it provides cheap offices and a coworking space for the pre-seed stage.
+                </p>
+                <p>
+                    The PionierGarage Launchpad is the center of all activities of the PionierGarage and therefore also of GROW. 
+                    Most workshops and networking events will take place here. 
+                    Only the big main events will take place in locations more suited to the high visitor counts.
+                </p>
+                <p>
+                    If you need a place to work, want to connect to other founders or surround yourself with creativity, 
+                    feel free to send us a message.
+                </p>
+                <p>
+                    <strong>Address:</strong><br />
+                    Rintheimer Str. 15<br />
+                    76131 Karlsruhe<br />
+                    Germany
+                </p>
+                <ul class="icons">
+                    <li><a href="https://pioniergarage.de/launchpad" target="_blank">Website</a></li>
+                    <li><a href="mailto:launchpad@pioniergarage.de">Email</a></li>
                 </ul>
             </section>
         </div>
