--- a/Grow.Server/Views/Home/Index.cshtml
+++ b/Grow.Server/Views/Home/Index.cshtml
@@ -15,18 +15,30 @@
     @if (Model.IsBeforeContest)
     {
         // countdown
-        var timeLeftBefore = Model.ContestStart - DateTime.Now;
+        var timeLeft = Model.ContestStart - DateTime.UtcNow;
         <h2>
             GROW @Model.Contest.Year is starting soon<br />
-            @if (Model.MainEvents.Any())
-            {
-                <span class="countdown">
-                    <span id="countdown-days">@timeLeftBefore.Days</span> :
-                    <span id="countdown-hours">@timeLeftBefore.Hours</span> :
-                    <span id="countdown-mins">@timeLeftBefore.Minutes</span> :
-                    <span id="countdown-secs">@timeLeftBefore.Seconds</span>
-                </span>
-            }
+            <script>
+                var contestStart = new Date('@Model.ContestStart.ToString("yyyy'-'MM'-'dd'T'HH':'mm':'ss'.'fff'Z'")');
+            </script>
+            <div id="clockdiv">
+                <div>
+                    <span class="days">@timeLeft.Days.ToString("#00")</span>
+                    <div class="smalltext">Days</div>
+                </div>
+                <div>
+                    <span class="hours">@timeLeft.Hours.ToString("00")</span>
+                    <div class="smalltext">Hrs</div>
+                </div>
+                <div>
+                    <span class="minutes">@timeLeft.Minutes.ToString("00")</span>
+                    <div class="smalltext">Mins</div>
+                </div>
+                <div>
+                    <span class="seconds">@timeLeft.Seconds.ToString("00")</span>
+                    <div class="smalltext">Secs</div>
+                </div>
+            </div>
         </h2>
     }
     else
@@ -55,13 +67,16 @@
             </p>
         </header>
         <p>
-            GROW, the student founding contest in Karlsruhe, is aimed at helping student entrepreneurs to get the right experience,
+            GROW, the student founding contest in <strong>Karlsruhe</strong>, is aimed at helping student entrepreneurs to get the right experience,
             knowledge and network to found their own company. There are no requirements; some teams start with nothing but an idea and others are already working on their prototype. We value progress; it doesn’t matter where you start, as long as you GROW.
         </p>
         <p>
             At the end you can get the chance to pitch your progress in front of <strong>500+ people</strong>
             including an experienced jury and may win one of the prizes from our <strong>prize pool worth over 10.000 €</strong>.
         </p>
+        <h3 style="text-align: center">
+            <strong>Supporting young founders - every winter in Karlsruhe</strong>
+        </h3>
     </section>
 
     <section id="cta">
