--- a/Grow.Server/wwwroot/css/main.css
+++ b/Grow.Server/wwwroot/css/main.css
@@ -967,13 +967,41 @@ body {
     margin-left: 8.3333333333%; } }
 
 /* Index-specific */
-.countdown {
-  font-family: 'Space Mono';
-  font-weight: bold;
-  font-size: 200%; }
-  @media screen and (max-width: 599px) {
-    .countdown {
-      font-size: 7.5vw; } }
+#clockdiv {
+  font-family: sans-serif;
+  color: #fff;
+  display: inline-block;
+  font-weight: 100;
+  text-align: center;
+  font-size: 30px; }
+  #clockdiv > div {
+    padding: 10px;
+    border-radius: 3px;
+    background: rgba(255, 255, 255, 0.5);
+    display: inline-block;
+    color: #b31918;
+    font-weight: bold; }
+    #clockdiv > div > span {
+      border-radius: 3px;
+      background: rgba(255, 255, 255, 0.5);
+      width: 70px;
+      height: 70px;
+      display: grid;
+      align-items: center; }
+  #clockdiv .smalltext {
+    padding-top: 5px;
+    font-size: 16px; }
+  @media screen and (max-width: 499px) {
+    #clockdiv {
+      font-size: 20px; }
+      #clockdiv > div {
+        padding: 10px;
+        line-height: 100%; }
+        #clockdiv > div > span {
+          width: 45px;
+          height: 45px; }
+      #clockdiv .smalltext {
+        font-size: 12px; } }
 
 .img-block img {
   width: 100px;
