--- a/Grow.Server/Views/Event/ResponseConfirmation.cshtml
+++ b/Grow.Server/Views/Event/ResponseConfirmation.cshtml
@@ -1,4 +1,8 @@
-﻿<article id="main">
+﻿@{
+    ViewData["Title"] = "Event Response";
+}
+
+<article id="main">
 
     <header class="special container">
         <span class="icon fa-calendar-o"></span>
