--- a/Grow.Server/Views/Shared/Layouts/_AdminLayout.cshtml
+++ b/Grow.Server/Views/Shared/Layouts/_AdminLayout.cshtml
@@ -73,6 +73,12 @@
     <li>
         <hr />
     </li>
+    <li class="@SetActiveIfIsCurrentController("Files")">
+        <a asp-controller="Files" asp-action="Index" asp-area="Admin">
+            <i class="nc-icon nc-image"></i>
+            Files
+        </a>
+    </li>
     <li class="@SetActiveIfIsCurrentController("Accounts")">
         <a asp-controller="Accounts" asp-action="Index" asp-area="Admin">
             <i class="nc-icon nc-single-02"></i>
