--- a/Grow.Server/Areas/Admin/Views/Files/Edit.cshtml
+++ b/Grow.Server/Areas/Admin/Views/Files/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Grow.Data.Entities.Contest
+﻿@model Grow.Data.Entities.File
 
 @{
     ViewData["Title"] = "Create";
@@ -6,12 +6,9 @@
 
 <h2>Create</h2>
 
-<h4>Contest</h4>
+<h4>File</h4>
 
 <hr />
-<entitysearch asp-type="@Html.GetController()" />
-<hr />
-
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
@@ -22,19 +19,24 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Year" class="control-label"></label>
-                <input asp-for="Year" class="form-control" />
-                <span asp-validation-for="Year" class="text-danger"></span>
+                <label asp-for="Url" class="control-label"></label>
+                <input asp-for="Url" disabled="disabled" class="form-control" />
+                <span asp-validation-for="Url" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Language" class="control-label"></label>
-                <input asp-for="Language" class="form-control" />
-                <span asp-validation-for="Language" class="text-danger"></span>
+                <label asp-for="AltText" class="control-label"></label>
+                <input asp-for="AltText" class="form-control" />
+                <span asp-validation-for="AltText" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="RegistrationUrl" class="control-label"></label>
-                <input asp-for="RegistrationUrl" class="form-control" />
-                <span asp-validation-for="RegistrationUrl" class="text-danger"></span>
+                <label asp-for="Extension" class="control-label"></label>
+                <input asp-for="Extension" disabled="disabled" class="form-control" />
+                <span asp-validation-for="Extension" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Category" class="control-label"></label>
+                <select asp-for="Category" asp-items="ViewBag.Categories" class="form-control"></select>
+                <span asp-validation-for="Category" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <div class="checkbox">
