--- a/Grow.Server/Styles/backend.scss
+++ b/Grow.Server/Styles/backend.scss
@@ -11,6 +11,11 @@ input[type=checkbox] {
     vertical-align: top;
 }
 
+input[disabled=disabled] {
+    background-color: rgba(0,0,0,0.05);
+    font-style: italic;
+}
+
 /* Column selector input in the Backend vertical navbar */
 #contest-selector {
     background-color: transparent;
@@ -68,6 +73,17 @@ tr.inactive {
     background: linear-gradient(270deg, rgba(255,255,255,0), rgba(135,228,252,0.35), rgba(255,255,255,0));
     background-size: 400% 100%;
     animation: loading-back 1.5s ease infinite;
+}
+
+/* Preview images */
+img.preview {
+    max-width: 200px;
+    max-height: 150px;
+}
+
+img.preview-large {
+    max-width: 300px;
+    max-height: 250px;
 }
 
 /* Entity search box */
