--- a/Grow.Server/wwwroot/css/backend.css
+++ b/Grow.Server/wwwroot/css/backend.css
@@ -8,6 +8,10 @@ input[type=checkbox] {
   margin: 3px;
   vertical-align: top; }
 
+input[disabled=disabled] {
+  background-color: rgba(0, 0, 0, 0.05);
+  font-style: italic; }
+
 /* Column selector input in the Backend vertical navbar */
 #contest-selector {
   background-color: transparent;
@@ -49,6 +53,15 @@ tr.inactive {
   background: linear-gradient(270deg, rgba(255, 255, 255, 0), rgba(135, 228, 252, 0.35), rgba(255, 255, 255, 0));
   background-size: 400% 100%;
   animation: loading-back 1.5s ease infinite; }
+
+/* Preview images */
+img.preview {
+  max-width: 200px;
+  max-height: 150px; }
+
+img.preview-large {
+  max-width: 300px;
+  max-height: 250px; }
 
 /* Entity search box */
 #search-box {
